syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.enesfurkan.grpc";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string message = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  string message = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  string message = 1;
}





